# GB2CPP

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  CMakeLists.txt.backup  README.md  TROUBLESHOOTING.md  build_and_deploy.bat  build_and_deploy_macos.sh  gb2_launcher.nsi  run_headless.bat  run_headless.sh  run_sequence_test.bat
.claude/: settings.local.json
.github/workflows/: build-release.yml
build_macos/: CMakeCache.txt  Makefile  cmake_install.cmake
build_macos/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_macos/GB2_autogen/: deps
build_macos/GB2_autogen/6YEA5652QU/: moc_CommandLineHandler.cpp  moc_CommandLineHandler.cpp.d  moc_DataProcessor.cpp  moc_DataProcessor.cpp.d  moc_DataTableWidget.cpp  moc_DataTableWidget.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_MetricsDialog.cpp  moc_MetricsDialog.cpp.d  moc_MetricsTableWidget.cpp  moc_MetricsTableWidget.cpp.d  moc_PandasTableModel.cpp  moc_PandasTableModel.cpp.d  moc_PlotSettingsDialog.cpp  moc_PlotSettingsDialog.cpp.d  moc_PlotWidget.cpp  moc_PlotWidget.cpp.d  moc_SingleInstanceApp.cpp  moc_SingleInstanceApp.cpp.d  moc_StatusWidget.cpp  moc_StatusWidget.cpp.d  moc_TableWidget.cpp  moc_TableWidget.cpp.d
build_win/: CMakeCache.txt  Makefile  cmake_install.cmake
build_win/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_win/GB2_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_win/GB2_autogen/6YEA5652QU/: moc_CommandLineHandler.cpp  moc_CommandLineHandler.cpp.d  moc_DataProcessor.cpp  moc_DataProcessor.cpp.d  moc_DataTableWidget.cpp  moc_DataTableWidget.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_MetricsDialog.cpp  moc_MetricsDialog.cpp.d  moc_MetricsTableWidget.cpp  moc_MetricsTableWidget.cpp.d  moc_PandasTableModel.cpp  moc_PandasTableModel.cpp.d  moc_PlotSettingsDialog.cpp  moc_PlotSettingsDialog.cpp.d  moc_PlotWidget.cpp  moc_PlotWidget.cpp.d  moc_SingleInstanceApp.cpp  moc_SingleInstanceApp.cpp.d  moc_StatusWidget.cpp  moc_StatusWidget.cpp.d  moc_TableWidget.cpp  moc_TableWidget.cpp.d
cmake/: UpdateVersion.cmake
include/: CDECodesDialog.h  CommandLineHandler.h  Config.h  DataProcessor.h  DataTableWidget.h  MainWindow.h  MetricsCalculator.h  MetricsDialog.h  MetricsTableWidget.h  PandasTableModel.h  PlotSettingsDialog.h  PlotWidget.h  SingleInstanceApp.h  StatusWidget.h  TableWidget.h  version_generated.h.in
resources/: GB2.manifest  version.rc
src/: CDECodesDialog.cpp  CommandLineHandler.cpp  DataProcessor.cpp  DataTableWidget.cpp  MainWindow.cpp  MetricsCalculator.cpp  MetricsDialog.cpp  MetricsTableWidget.cpp  PandasTableModel.cpp  PlotSettingsDialog.cpp  PlotWidget.cpp  PlotWidget_BoxPlot.cpp  PlotWidget_ErrorBar.cpp  PlotWidget_Legend.cpp  PlotWidget_Scatter.cpp  PlotWidget_Settings.cpp  PlotWidget_TSPanel.cpp  SingleInstanceApp.cpp  StatusWidget.cpp  TableWidget.cpp  main.cpp
